# pydoitz-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
pydoitz_cli/: __init__.py  __main__.py  application.py
pydoitz_cli/cmdb/: category.py
